Fix list gap issues in 'Constraints' in postup.html by switching display from flex to grid

--- a/src/scss/sections/_section-constraints.scss
+++ b/src/scss/sections/_section-constraints.scss
@@ -130,7 +130,7 @@
 		align-items: center;
 		justify-content: center;
 		grid-area: a;
-		opacity: 0.75;
+		opacity: 0.8;
 
 		img {
 			height: 100%;
@@ -219,7 +219,7 @@
 }
 
 .business-list-min-content {
-	display: block;
+	display: flex;
 
 	@include breakpoint(lg) {
 		display: none;
@@ -230,7 +230,7 @@
 	display: none;
 
 	@include breakpoint(lg) {
-		display: block;
+		display: flex;
 	}
 }
 
@@ -238,7 +238,7 @@
 	display: none;
 
 	@include breakpoint(mobile-lg) {
-		display: block;
+		display: flex;
 	}
 
 	@include breakpoint(sm) {
@@ -250,7 +250,7 @@
 	display: none;
 
 	@include breakpoint(med) {
-		display: block;
+		display: flex;
 	}
 
 	@include breakpoint(lg) {
@@ -259,7 +259,7 @@
 }
 
 .hide-mobile-lg-to-sm {
-	display: block;
+	display: flex;
 
 	@include breakpoint(mobile-lg) {
 		display: none;
